test/error/parsing_files/type_as_binding04.st
f (x, y, type) := g .

